Bouncing Balls/Bouncing Balls/Release/Bouncing Balls.ClangTidy.log
Error while processing C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\AssetManager.cpp.
Error while processing C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\Config.cpp.
Error while processing C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\ControlsScene.cpp.
Error while processing C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\DefaultScene.cpp.
Error while processing C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\main.cpp.
Error while processing C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\PlayerData.cpp.
Error while processing C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\PlaySelectScene.cpp.
Error while processing C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\Resolution.cpp.
Error while processing C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\SceneManager.cpp.
Error while processing C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\SettingsScene.cpp.
Error while processing C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\StatsScene.cpp.
Error while processing C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\UIButton.cpp.
Error while processing C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\UIElement.cpp.
Error while processing C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\UIRadioButton.cpp.
Error while processing C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\Utils.cpp.
C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\AssetManager.cpp:47:1: warning: non-void function does not return a value in all control paths [clang-diagnostic-return-type]
}
^
C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\AssetManager.cpp:72:1: warning: non-void function does not return a value in all control paths [clang-diagnostic-return-type]
}
^
C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\AssetManager.cpp:97:1: warning: non-void function does not return a value in all control paths [clang-diagnostic-return-type]
}
^
C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\AssetManager.cpp:122:1: warning: non-void function does not return a value in all control paths [clang-diagnostic-return-type]
}
^
C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\AssetManager.cpp:129:84: warning: backslash and newline separated by space [clang-diagnostic-backslash-newline-escape]
                //Create temporary string to hold value loaded from cfg file, to replace / with \\ 
                                                                                                 ^
C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\AssetManager.cpp:129:85: warning: multi-line // comment [clang-diagnostic-comment]
                //Create temporary string to hold value loaded from cfg file, to replace / with \\ 
                                                                                                  ^
C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\AssetManager.cpp:143:6: error: use of undeclared identifier 'tempString' [clang-diagnostic-error]
                                        tempString = ref.second;
                                        ^
C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\AssetManager.cpp:147:39: error: use of undeclared identifier 'tempString' [clang-diagnostic-error]
                                        if (tex[ref.first]->loadFromFile(tempString) == true) {
                                                                         ^
C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\AssetManager.cpp:182:6: error: use of undeclared identifier 'tempString' [clang-diagnostic-error]
                                        tempString = ref.second;
                                        ^
C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\AssetManager.cpp:186:41: error: use of undeclared identifier 'tempString' [clang-diagnostic-error]
                                        if (sound[ref.first]->loadFromFile(tempString) == true) {
                                                                           ^
Suppressed 4 warnings (4 in non-user code).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).
C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\AssetManager.cpp:220:6: error: use of undeclared identifier 'tempString' [clang-diagnostic-error]
                                        tempString = ref.second;
                                        ^
C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\AssetManager.cpp:224:41: error: use of undeclared identifier 'tempString' [clang-diagnostic-error]
                                        if (fonts[ref.first]->loadFromFile(tempString) == true) {
                                                                           ^
C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\AssetManager.cpp:260:6: error: use of undeclared identifier 'tempString' [clang-diagnostic-error]
                                        tempString = ref.second;
                                        ^
C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\AssetManager.cpp:263:41: error: use of undeclared identifier 'tempString' [clang-diagnostic-error]
                                        if (music[ref.first]->openFromFile(tempString) == true) {
                                                                           ^
C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\AssetManager.cpp:327:22: warning: equality comparison result unused [clang-diagnostic-unused-comparison]
                hasFinishedCleanup == true;
                                   ^
C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\AssetManager.cpp:327:22: note: use '=' to turn this equality comparison into an assignment
                hasFinishedCleanup == true;
                                   ^~
                                   =
C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\Config.cpp:170:3: warning: ignoring return value of function declared with 'nodiscard' attribute [clang-diagnostic-unused-result]
                config.getData()->find(key);
                ^
C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\DefaultScene.cpp:77:44: warning: implicit conversion from 'int' to 'sf::Uint8' (aka 'unsigned char') changes value from 500 to 244 [clang-diagnostic-constant-conversion]
                sprites[i]->setColor(sf::Color(255, 255, 500, 255));
                                                         ^
C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\SceneManager.cpp:66:3: warning: delete called on non-final 'UIElement' that has virtual functions but non-virtual destructor [clang-diagnostic-delete-non-abstract-non-virtual-dtor]
                delete ui_e;
                ^
C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\UIButton.cpp:16:2: warning: ignoring return value of function declared with 'nodiscard' attribute [clang-diagnostic-unused-result]
        modes->empty();
        ^
C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\UIElement.cpp:16:2: warning: ignoring return value of function declared with 'nodiscard' attribute [clang-diagnostic-unused-result]
        states.empty();
        ^
C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\UIRadioButton.cpp:80:2: warning: switch condition has boolean value [clang-diagnostic-switch-bool]
        switch (state) {
        ^
C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\Utils.cpp:567:3: warning: Value stored to 'start' is never read [clang-analyzer-deadcode.DeadStores]
                start = NULL;
                ^
C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\Utils.cpp:567:3: note: Value stored to 'start' is never read
C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\Utils.cpp:568:3: warning: Value stored to 'split' is never read [clang-analyzer-deadcode.DeadStores]
                split = NULL;
                ^
C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\Utils.cpp:568:3: note: Value stored to 'split' is never read
C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\Utils.cpp:569:3: warning: Value stored to 'end' is never read [clang-analyzer-deadcode.DeadStores]
                end = NULL;
                ^
C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\Utils.cpp:569:3: note: Value stored to 'end' is never read
C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\Utils.cpp:617:1: warning: non-void function does not return a value in all control paths [clang-diagnostic-return-type]
}
^
C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\Utils.cpp:622:2: warning: switch condition has boolean value [clang-diagnostic-switch-bool]
        switch (b) {
        ^
C:\Git\BouncingBalls\Bouncing-Balls\Bouncing Balls\Bouncing Balls\Utils.cpp:628:1: warning: non-void function does not return a value in all control paths [clang-diagnostic-return-type]
}
^
